fix: remove no-scrollbar utility to simplify styling

--- a/dashboard/src/app.css
+++ b/dashboard/src/app.css
@@ -66,28 +66,6 @@
 	--shadow-date-field-focus: 0px 0px 0px 3px rgba(24, 24, 27, 0.17);
 }
 
-.dark {
-	--background: oklch(0.141 0.005 285.823); /* --color-zinc-950 */
-	--foreground: oklch(0.985 0 0); /* --color-zinc-50 */
-	--card: oklch(0.141 0.005 285.823); /* --color-zinc-950 */
-	--card-foreground: oklch(0.985 0 0); /* --color-zinc-50 */
-	--popover: oklch(0.141 0.005 285.823); /* --color-zinc-950 */
-	--popover-foreground: oklch(0.985 0 0); /* --color-zinc-50 */
-	--primary: oklch(0.985 0 0); /* --color-zinc-50 */
-	--primary-foreground: oklch(0.21 0.006 285.885); /* --color-zinc-900 */
-	--secondary: oklch(0.274 0.006 286.033); /* --color-zinc-800 */
-	--secondary-foreground: oklch(0.985 0 0); /* --color-zinc-50 */
-	--muted: oklch(0.21 0.006 285.885); /* --color-zinc-900 */
-	--muted-foreground: oklch(0.65 0.01 286); /* 🔥 near --color-zinc-400 */
-	--accent: oklch(0.21 0.006 285.885); /* --color-zinc-900 */
-	--accent-foreground: oklch(0.985 0 0); /* --color-zinc-50 */
-	--destructive: oklch(0.396 0.141 25.723); /* --color-red-900 */
-	--destructive-foreground: oklch(0.637 0.237 25.331); /* --color-red-500 */
-	--border: oklch(0.274 0.006 286.033); /* --color-zinc-800 */
-	--input: oklch(0.274 0.006 286.033); /* --color-zinc-800 */
-	--ring: oklch(0.442 0.017 285.786); /* --color-zinc-600 */
-}
-
 @theme inline {
 	--color-svelte: var(--svelte);
 	--font-sans: var(--font-sans);
@@ -443,14 +421,4 @@ input[type='number'] {
 input[type='text'] {
 	appearance: textfield;
 	-moz-appearance: textfield;
-}
-
-@utility no-scrollbar {
-	/* Hide scrollbar for Chrome, Safari and Opera */
-	&::-webkit-scrollbar {
-		display: none;
-	}
-	/* Hide scrollbar for IE, Edge and Firefox */
-	-ms-overflow-style: none; /* IE and Edge */
-	scrollbar-width: none; /* Firefox */
 }
